--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
 
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/style.css" rel="stylesheet">
 
         <title>Goald {% block title %}{% endblock %}</title>
 
