--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,19 +13,18 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
         <link href="/static/style.css" rel="stylesheet">
 
-        <title>Goald {% block title %}{% endblock %}</title>
+        <link rel="icon" type="image/x-icon" href="static/pan.ico">
+        <title> of Goald {% block title %}{% endblock %}</title>
 
     </head>
 
     <body>
 
-        <nav class="border navbar navbar-expand-md navbar-light">
+        <nav class="navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span>Goald</span></a>
+                <a class="navbar-brand" href="/"><span><img src="static/pan.ico" alt="pot"> of Goald</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -58,7 +57,6 @@
               <p class="text-muted text-center">Copyright © 2023 Hayato Ozawa. All Rights Reserved.</p>
             </div>
         </footer>
-
     </body>
 
 </html>
