--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,44 @@
+body {
+    background-color: rgb(238, 220, 198);
+    font-family: serif;
+}
+
 p.hidden {
     display: none;
 }
+
+.member {
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgb(227, 180, 70);
+}
+
+.card {
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgb(227, 180, 70);
+}
+
+.pot {
+    width: 200px;
+    height: 150px;
+    border: 5px solid black;
+    border-radius: 0 0 20% 20%;
+}
+
+.water {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgb(238, 220, 198) 0%, rgb(238, 220, 198) 30%, rgb(227, 180, 70) 30%, rgb(227, 180, 70) 100%);
+    overflow: hidden;
+    border-radius: 0 0 20% 20%;
+}   
+
+.pot-img {
+    width: 100px;
+    height: 100px;
+}
+
 
