--- a/templates/room.html
+++ b/templates/room.html
@@ -5,47 +5,63 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">参加者</h5>
+    {% if number_of_members > 2 %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <h2>参加者</h2>
+                    <div class="member mb-3">
                         {% for username in usernames %}
-                            {{ username }}<br>
+                            <h5>{{ username }}  </h5>
                         {% endfor %}
                     </div>
-                </div>
-            </div>
-            <div class="col-md-8">
-                {% for goal in goals %}
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ goal.goal }}</h5>
-                            {% if goal.user_id == user_id %}
-                                <form action="/update_progress_rate" method="POST">
-                                    <label for="progress">達成率:{{ goal.progress_rate }}%</label><br>
-                                    <p id="deadline-{{ goal.user_id }}" class="hidden">{{ goal.deadline }}</p><br>
-                                    <p>残り時間：<span id="remaining-time-{{ goal.user_id }}"></span></p><br>
-                                    <input type="range" id="progress" name="progress" min="0" max="100" step="1" value="{{goal.progress_rate}}"><br>
-                                    <output for="progress" id="progressValue">{{goal.progress_rate}}%</output><br>
-                                    <input class="btn btn-primary" type="submit" value="更新">
-                                </form>
-                            {% else %}
-                                <p>達成率:{{ goal.progress_rate }}%</p>
-                                <input type="range" id="progress" name="progress" min="0" max="100" step="1" value="{{goal.progress_rate}}" disabled><br>
-                                <p id="deadline-{{ goal.user_id }}" class="hidden">{{ goal.deadline }}</p>
-                                <p>残り時間：<span id="remaining-time-{{ goal.user_id }}"></span></p>
-                            {% endif %}
+                    <div class="leaveButton mb-5">
+                        <form action="/leave_room" method="post">
+                            <button class="btn btn-danger btn-lg" type="submit">退出</button>
+                        </form>
+                    </div>
+                    <div class="mb-3">
+                        <h2>全体の達成率</h2>
+                        <h1 id="average">{{ average }}%</h1> 
+                        <div class="pot mx-auto">
+                            <div class="water"></div>
                         </div>
                     </div>
-                {% endfor %}
-                <form action="/leave_room" method="post">
-                    <button class="btn btn-danger" type="submit">退出</button>
-                </form>
+                </div>
+                <div class="col-md-8">
+                    <h2>目標</h2>
+
+                    {% for goal in goals %}
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h2 class="card-title">{{ goal.goal }}</h2>
+                                {% if goal.user_id == user_id %}
+                                    <p id="deadline-{{ goal.user_id }}" class="hidden">{{ goal.deadline }}</p>
+                                    <p>あと<span id="remaining-time-{{ goal.user_id }}"></span></p>
+                                    <form action="/update_progress_rate" method="POST">
+                                        <label for="progress">達成率:{{ goal.progress_rate }}%</label><br>
+                                        <input type="range" id="progress" name=progress min="0" max="100" step="1" value="{{goal.progress_rate}}">
+                                        <output for="progress" id="progressValue">{{goal.progress_rate}}%</output><br>
+                                        <input class="btn btn-primary" type="submit" value="更新">
+                                    </form>
+                                {% else %}
+                                    <p id="deadline-{{ goal.user_id }}" class="hidden">{{ goal.deadline }}</p>
+                                    <p>あと<span id="remaining-time-{{ goal.user_id }}"></span></p>
+                                    <p>達成率:{{ goal.progress_rate }}%</p>
+                                    <input type="range" min="0" max="100" step="1" value="{{goal.progress_rate}}" disabled><br>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% endfor %}
+                    
+                </div>
             </div>
         </div>
-    </div>
+    {% else %}
+        <div class="container">
+            <h1>参加者が3人以上で開始します</h1>
+        </div>
+    {% endif %}
     <script>
         // 達成率のスライダー
         const progressSlider = document.getElementById('progress');
@@ -81,6 +97,18 @@
         // 1秒ごとに更新
         setInterval(updateRemainingTime, 1000);
         updateRemainingTime();  // ページ読み込み時にも更新
+
+        // 全体の達成率の表示
+        const average = document.getElementById('average').textContent;
+        const water = document.querySelector('.water');
+        
+        //averageをintegerに変換
+        const averageInt = parseInt(average);
+        //水の高さを決める
+        const waterHeight = 100 - averageInt;
+        //水の高さを設定
+        const gradient = `linear-gradient(180deg, rgb(238, 220, 198) 0%, rgb(238, 220, 198) ${waterHeight}%, rgb(227, 180, 70) ${waterHeight}%, rgb(227, 180, 70) 100%)`;
+        water.style.background = gradient;
 
     </script>
 {% endblock %}
