fix username, leave button

--- a/templates/room.html
+++ b/templates/room.html
@@ -61,6 +61,11 @@
         <div class="container">
             <h1>参加者が3人以上で開始します</h1>
         </div>
+        <div class="leaveButton mb-5">
+            <form action="/leave_room" method="post">
+                <button class="btn btn-danger btn-lg" type="submit">退出</button>
+            </form>
+        </div>
     {% endif %}
     <script>
         // 達成率のスライダー
