fix the register form and upadate route

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,13 +7,13 @@
 {% block main %}
     <form action="/register" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="ユーザーネーム" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="パスワード" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirmation" type="password">
+            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="パスワード確認" type="password">
         </div>
         <button class="btn btn-primary" type="submit">登録</button>
     </form>
