--- a/templates/goal.html
+++ b/templates/goal.html
@@ -9,20 +9,26 @@
         <div class="goal mb-3">
             <h1>{{ goal }}</h1>
         </div>
-        <div class="progress_rate mb-3">
+        <div class="progress_rate my-5">
             <form action="/update_progress_rate" method="POST">
-                <label for="progress">達成率:{{ progress_rate }}%</label><br>
+                <label for="progress"><h3>達成率:{{ progress_rate }}%</h3></label><br>
                 <input type="range" id="progress" name=progress min="0" max="100" step="1" value="{{progress_rate}}">
                 <output for="progress" id="progressValue">{{progress_rate}}%</output><br>
-                <input class="btn btn-primary" type="submit" value="更新">
+                <input class="btn btn-primary" type="submit" value="達成率を更新">
             </form>
         </div>
-        <div class="progress_rate mb-3">
+        <div class="deadline my-5">
             <h3><span id="remaining-time"></span></h3>
+            <form action="/update_deadline" method="POST" class="mt-3">
+                <label for="deadline" class="form-label"><h5>新しい期限</h5></label><br>
+                <input class="date" type="date" name="date" value="{{ today }}" min="{{ today }}" >
+                <input class="time mb-3" type="time" name="time"><br>
+                <input class="btn btn-primary" type="submit" value="期限を更新">
+            </form>
         </div>
         <form action="/delete_goal" method="post">
             <input name="goal_id" type="hidden" value="{{ id }}">
-            <button class="btn btn-danger" type="submit">削除</button>
+            <button class="btn btn-danger btn-lg" type="submit">目標を変更</button><br>
         </form>
     {% else %}
     <form action="/goal" method="post">
