--- a/templates/room.html
+++ b/templates/room.html
@@ -29,6 +29,11 @@
                     </div>
                 </div>
                 <div class="col-md-8">
+                    <div class="mb-3">
+                        <h2>期限</h2>
+                            <p id="deadline" hidden>{{ deadline }}</p>
+                            <p id="remaining-time"></p>
+                    </div>
                     <h2>目標</h2>
 
                     {% for goal in goals %}
@@ -36,8 +41,6 @@
                             <div class="card-body">
                                 <h2 class="card-title">{{ goal.goal }}</h2>
                                 {% if goal.user_id == user_id %}
-                                    <p id="deadline-{{ goal.user_id }}" class="hidden">{{ goal.deadline }}</p>
-                                    <p><span id="remaining-time-{{ goal.user_id }}"></span></p>
                                     <form action="/update_progress_rate" method="POST">
                                         <label for="progress">達成率:{{ goal.progress_rate }}%</label><br>
                                         <input type="range" id="progress" name=progress min="0" max="100" step="1" value="{{goal.progress_rate}}">
@@ -45,8 +48,6 @@
                                         <input class="btn btn-primary" type="submit" value="更新">
                                     </form>
                                 {% else %}
-                                    <p id="deadline-{{ goal.user_id }}" class="hidden">{{ goal.deadline }}</p>
-                                    <p><span id="remaining-time-{{ goal.user_id }}"></span></p>
                                     <p>達成率:{{ goal.progress_rate }}%</p>
                                     <input type="range" min="0" max="100" step="1" value="{{goal.progress_rate}}" disabled><br>
                                 {% endif %}
@@ -78,25 +79,22 @@
 
         // 残り時間の表示
         function updateRemainingTime() {
-            const elements = document.querySelectorAll('[id^="remaining-time-"]');
-            elements.forEach(function(element) {
-                const userId = element.id.replace('remaining-time-', '');
-                const user_deadline = document.getElementById('deadline-' + userId).textContent;
-                const deadline = new Date(user_deadline);
-                // ユーザーごとに適切な方法でdeadlineを設定してください
-                const now = new Date();
-                const remainingTime = deadline - now;
+            const element = document.getElementById('remaining-time');
+            const deadlineText = document.getElementById('deadline').textContent;
+            const deadline = new Date(deadlineText);
 
-                if (remainingTime <= 0) {
-                    element.textContent = 'お疲れ様でした！';
-                } else {
-                    var days = Math.floor(remainingTime / (1000 * 60 * 60 * 24));
-                    var hours = Math.floor((remainingTime % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                    var minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
-                    var seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
-                    element.textContent = "あと" + days + "日 " + hours + "時間 " + minutes + "分 " + seconds + "秒";
-                }
-            });
+            const now = new Date();
+            const remainingTime = deadline - now;
+
+            if (remainingTime <= 0) {
+                element.textContent = 'お疲れ様でした！';
+            } else {
+                var days = Math.floor(remainingTime / (1000 * 60 * 60 * 24));
+                var hours = Math.floor((remainingTime % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
+                element.textContent = "あと" + days + ":" + hours + ":" + minutes + ":" + seconds;
+            }
         }
 
         // 1秒ごとに更新
