fix error room_route

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     {% if goal %}
         <div class="mb-3">
             <div class="username mb-5">
-                <h3>{{ username }}さんの目標</h3>
+                <h3>{{ username }}は</h3>
             </div>
             <h1 class="goal mx-auto">{{ goal }}</h1>
         </div>
