--- a/templates/goal.html
+++ b/templates/goal.html
@@ -24,8 +24,9 @@
     {% else %}
     <form action="/goal" method="post">
         <div class="mb-3">
+            <p class="my-3">私は</p>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="final_goal" name="final_goal" placeholder="最終目標" type="text">
-            <p class="my-3">ために、</p>
+            <p class="my-3">ために、今週</p>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="goal" name="goal" placeholder="ミニマム目標" type="text">
         </div>
         <button class="btn btn-primary" type="submit">宣言</button>
