--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,8 +6,8 @@
 
 {% block main %}
     <div class="container">
-        <div class="username"><h1>{{ username }}さんのプロフィール</h1></div>
-        <div class="user_type">
+        <div class="username mb-3"><h1>{{ username }}さんのプロフィール</h1></div>
+        <div class="user_type mb-3">
             <h2>ユーザータイプ</h2>
             <h3>{{ user_type }}</h3>
         </div>
