user type and each room page

--- a/templates/make_room.html
+++ b/templates/make_room.html
@@ -13,7 +13,7 @@
 
     <form action="/make_room" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="room_id" name="room_id" placeholder="ルームID" type="number">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="room_id" name="room_id" placeholder="ルームID" type="number" min="1" max="9999">
         </div>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="room_password" name="room_password" placeholder="ルームパスワード" type="password">
