--- a/templates/register.html
+++ b/templates/register.html
@@ -15,20 +15,19 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="パスワード確認" type="password">
         </div>
-        <div class="mb-3 usertype">
+        <div class="d-flex justify-content-center mb-3 usertype">
             <div class="form-check">
-                <input class="form-check-input" id="positive" name="usertype" type="radio" value="positive">
+                <input class="form-check-input mx-auto" id="positive" name="usertype" type="radio" value="positive">
                 <label class="form-check-label" for="positive">positive</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" id="sensitive" name="usertype" type="radio" value="sensitive">
+                <input class="form-check-input mx-auto" id="sensitive" name="usertype" type="radio" value="sensitive">
                 <label class="form-check-label" for="sensitive">sensitive</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" id="negative" name="usertype" type="radio" value="negative">
+                <input class="form-check-input mx-auto" id="negative" name="usertype" type="radio" value="negative">
                 <label class="form-check-label" for="negative">negative</label>
-            </div>
-            
+            </div>  
         </div>
         <button class="btn btn-primary" type="submit">登録</button>
     </form>
