profile page error

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,11 +6,7 @@
 
 {% block main %}
     <div class="container">
-        <div class="username mb-3"><h1>{{ username }}さんのプロフィール</h1></div>
-        <div class="user_type mb-3">
-            <h2>ユーザータイプ</h2>
-            <h3>{{ user_type }}</h3>
-        </div>
+        <div class="username mb-3"><h1>{{ username }}さんの履歴</h1></div>
         <div class="goals_history p-5">
             <table class="table table-warning table-sm p-5">
                 <thead>
