--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             <div class="username mb-5">
                 <h3>{{ username }}は、今週</h3>
             </div>
-            <h1 class="goal mx-auto">{{ goal }}</h1>
+            <h1 class="goal mx-auto mb-3">{{ goal }}</h1>
             <div class="remaining-time mb-3">
                 <h3 id="remaining-time"></h3>
             </div>
