index and goal error

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,12 @@
                 <h3>{{ username }}は、今週</h3>
             </div>
             <h1 class="goal mx-auto mb-3">{{ goal }}</h1>
+
+            {% if deadline %}
             <div class="remaining-time mb-3">
                 <h3 id="remaining-time"></h3>
             </div>
+            {% endif %}
         </div>
     {% else %}
         <div class="mb-3">
