--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             <div class="username mb-5">
                 <h3>{{ username }}は、今週</h3>
             </div>
-            <h1 class="goal mx-auto mb-3">{{ goal }}</h1>
+            <h1 class="goal mx-auto mb-5">{{ goal }}</h1>
 
             {% if deadline %}
             <div class="remaining-time mb-3">
@@ -34,15 +34,6 @@
             var remainingTime = deadline - now;
             if (remainingTime <= 0) {
                 document.getElementById("remaining-time").textContent = "お疲れさまでした！";
-                let confirm_result = confirm("お疲れさまでした！\n新たな目標とルームを設定しましょう！");
-                if (confirm_result) {
-                    location.href = "/delete_goal_and_room";
-                    alert("目標とルームを削除しました。");
-                }
-                else {
-                    alert("キャンセルしました。");
-                }
-
             } else {
                 var days = Math.floor(remainingTime / (1000 * 60 * 60 * 24));
                 var hours = Math.floor((remainingTime % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
@@ -53,9 +44,22 @@
             }
         }
 
+        function inform_deadline(){
+            var remainingTime = document.getElementById("remaining-time").textContent;
+            if (remainingTime == "お疲れさまでした！"){
+                let confirm_result = confirm("お疲れさまでした！\n新たな目標とルームを設定しましょう！");
+                if (confirm_result) {
+                    location.href = "/delete_goal_and_room";
+                }
+            }
+        }
+
         // 1秒ごとに更新
         setInterval(updateRemainingTime, 1000);
         updateRemainingTime();  // ページ読み込み時にも更新
+
+        //10秒ごとに確認
+        setInterval(inform_deadline, 10000);
     </script>
 
 {% endblock %}
