--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <link href="/static/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY4DBtF+BDt4nj9r7TwIps5r0d5P62jg5rm" crossorigin="anonymous">
 
         <link rel="icon" type="image/x-icon" href="static/pan.ico">
         <title> of Goald {% block title %}{% endblock %}</title>
