--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,27 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="ユーザーネーム" type="text">
         </div>
-        <div class="mb-3">
+        <div class="mb-3 password-wrap">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="パスワード" type="password">
+            <img class="eye-slash-solid" src="/static/eye-slash-solid.svg" onclick="togglePasswordVisibility()" style="display: none;">
+            <img class="eye-solid" src="/static/eye-solid.svg" onclick="togglePasswordVisibility()">
         </div>
         <button class="btn btn-primary" type="submit">ログイン</button>
     </form>
+    <script>
+        function togglePasswordVisibility() {
+            const passwordInput = document.getElementById('password');
+            const eyeSlash = document.querySelector('.eye-slash-solid');
+            const eye = document.querySelector('.eye-solid');
+            if (passwordInput.type === 'password') {
+                passwordInput.type = 'text';
+                eyeSlash.style.display = 'block';
+                eye.style.display = 'none';
+            } else {
+                passwordInput.type = 'password';
+                eyeSlash.style.display = 'none';
+                eye.style.display = 'block';
+            }
+        }
+    </script>
 {% endblock %}
