--- a/templates/make_room.html
+++ b/templates/make_room.html
@@ -17,6 +17,8 @@
         </div>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="room_password" name="room_password" placeholder="ルームパスワード" type="password">
+            <img class="eye-slash-solid" src="/static/eye-slash-solid.svg" onclick="togglePasswordVisibility()" style="display: none;">
+            <img class="eye-solid" src="/static/eye-solid.svg" onclick="togglePasswordVisibility()">
         </div>
         <div class="mb-3">
             <label for="deadline" class="form-label">期限</label>
@@ -25,5 +27,21 @@
         </div>
         <button class="btn btn-primary" type="submit">作成</button>
     </form>
+    <script>
+        function togglePasswordVisibility() {
+            const passwordInput = document.getElementById('password');
+            const eyeSlash = document.querySelector('.eye-slash-solid');
+            const eye = document.querySelector('.eye-solid');
+            if (passwordInput.type === 'password') {
+                passwordInput.type = 'text';
+                eyeSlash.style.display = 'block';
+                eye.style.display = 'none';
+            } else {
+                passwordInput.type = 'password';
+                eyeSlash.style.display = 'none';
+                eye.style.display = 'block';
+            }
+        }
+    </script>
 {% endif %}
 {% endblock %}
