cheer to ask progress and password icon and push ranking message

--- a/templates/make_room.html
+++ b/templates/make_room.html
@@ -15,8 +15,8 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="room_id" name="room_id" placeholder="ルームID" type="number" min="1" max="9999">
         </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="room_password" name="room_password" placeholder="ルームパスワード" type="password">
+        <div class="mb-3 password-wrap">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="パスワード" type="password">
             <img class="eye-slash-solid" src="/static/eye-slash-solid.svg" onclick="togglePasswordVisibility()" style="display: none;">
             <img class="eye-solid" src="/static/eye-solid.svg" onclick="togglePasswordVisibility()">
         </div>
