--- a/templates/negative_room.html
+++ b/templates/negative_room.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="cheer_button mb-3">
                         <form action="/cheer" method="post">
-                            <button class="btn btn-warning btn-lg" type="submit">みんなを応援</button>
+                            <button class="btn btn-warning btn-lg" type="submit">進捗が気になる！</button>
                         </form>
                     </div>
                 </div>
