--- a/templates/enter_room.html
+++ b/templates/enter_room.html
@@ -9,9 +9,27 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="room_id" name="room_id" placeholder="ルームID" type="number" min="1" max="9999">
         </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="room_password" name="room_password" placeholder="ルームパスワード" type="password">
+        <div class="mb-3 password-wrap">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="パスワード" type="password">
+            <img class="eye-slash-solid" src="/static/eye-slash-solid.svg" onclick="togglePasswordVisibility()" style="display: none;">
+            <img class="eye-solid" src="/static/eye-solid.svg" onclick="togglePasswordVisibility()">
         </div>
         <button class="btn btn-primary" type="submit">入室</button>
     </form>
+    <script>
+        function togglePasswordVisibility() {
+            const passwordInput = document.getElementById('password');
+            const eyeSlash = document.querySelector('.eye-slash-solid');
+            const eye = document.querySelector('.eye-solid');
+            if (passwordInput.type === 'password') {
+                passwordInput.type = 'text';
+                eyeSlash.style.display = 'block';
+                eye.style.display = 'none';
+            } else {
+                passwordInput.type = 'password';
+                eyeSlash.style.display = 'none';
+                eye.style.display = 'block';
+            }
+        }
+    </script>
 {% endblock %}
